check parametes of 2nd stratage

--- a/exploration/Guru_1_EMA200_RSI_Over50.ipynb
+++ b/exploration/Guru_1_EMA200_RSI_Over50.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 129,
    "id": "4565eb6e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 130,
    "id": "d780955e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 131,
    "id": "c353641e",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 132,
    "id": "344ef1b8",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "(6142, 14)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 133,
    "id": "058c9ff5",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 134,
    "id": "03287e0e",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "(6000, 14)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 135,
    "id": "f7423ca8",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 136,
    "id": "9be51f8d",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "5999  49.681497  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 137,
    "id": "f3048458",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 138,
+   "id": "aa255665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>mid_o</th>\n",
+       "      <th>mid_h</th>\n",
+       "      <th>mid_l</th>\n",
+       "      <th>mid_c</th>\n",
+       "      <th>bid_o</th>\n",
+       "      <th>bid_h</th>\n",
+       "      <th>bid_l</th>\n",
+       "      <th>bid_c</th>\n",
+       "      <th>...</th>\n",
+       "      <th>body_perc_prev_2</th>\n",
+       "      <th>HANGING_MAN</th>\n",
+       "      <th>SHOOTING_STAR</th>\n",
+       "      <th>SPINNING_TOP</th>\n",
+       "      <th>MARUBOZU</th>\n",
+       "      <th>ENGULFING</th>\n",
+       "      <th>TWEEZER_TOP</th>\n",
+       "      <th>TWEEZER_BOTTOM</th>\n",
+       "      <th>MORNING_STAR</th>\n",
+       "      <th>EVENING_STAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5995</th>\n",
+       "      <td>2021-12-30 19:00:00+00:00</td>\n",
+       "      <td>1063</td>\n",
+       "      <td>1.13058</td>\n",
+       "      <td>1.13298</td>\n",
+       "      <td>1.13043</td>\n",
+       "      <td>1.13274</td>\n",
+       "      <td>1.13052</td>\n",
+       "      <td>1.13291</td>\n",
+       "      <td>1.13036</td>\n",
+       "      <td>1.13267</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13.821138</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5996</th>\n",
+       "      <td>2021-12-30 20:00:00+00:00</td>\n",
+       "      <td>1092</td>\n",
+       "      <td>1.13272</td>\n",
+       "      <td>1.13304</td>\n",
+       "      <td>1.13185</td>\n",
+       "      <td>1.13193</td>\n",
+       "      <td>1.13264</td>\n",
+       "      <td>1.13297</td>\n",
+       "      <td>1.13177</td>\n",
+       "      <td>1.13186</td>\n",
+       "      <td>...</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5997</th>\n",
+       "      <td>2021-12-30 21:00:00+00:00</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1.13195</td>\n",
+       "      <td>1.13276</td>\n",
+       "      <td>1.13194</td>\n",
+       "      <td>1.13258</td>\n",
+       "      <td>1.13188</td>\n",
+       "      <td>1.13269</td>\n",
+       "      <td>1.13187</td>\n",
+       "      <td>1.13249</td>\n",
+       "      <td>...</td>\n",
+       "      <td>84.705882</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5998</th>\n",
+       "      <td>2021-12-30 22:00:00+00:00</td>\n",
+       "      <td>118</td>\n",
+       "      <td>1.13252</td>\n",
+       "      <td>1.13264</td>\n",
+       "      <td>1.13222</td>\n",
+       "      <td>1.13230</td>\n",
+       "      <td>1.13204</td>\n",
+       "      <td>1.13236</td>\n",
+       "      <td>1.13182</td>\n",
+       "      <td>1.13218</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.386555</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5999</th>\n",
+       "      <td>2021-12-30 23:00:00+00:00</td>\n",
+       "      <td>507</td>\n",
+       "      <td>1.13227</td>\n",
+       "      <td>1.13258</td>\n",
+       "      <td>1.13190</td>\n",
+       "      <td>1.13224</td>\n",
+       "      <td>1.13214</td>\n",
+       "      <td>1.13251</td>\n",
+       "      <td>1.13183</td>\n",
+       "      <td>1.13216</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.829268</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 41 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          time  volume    mid_o    mid_h    mid_l    mid_c  \\\n",
+       "5995 2021-12-30 19:00:00+00:00    1063  1.13058  1.13298  1.13043  1.13274   \n",
+       "5996 2021-12-30 20:00:00+00:00    1092  1.13272  1.13304  1.13185  1.13193   \n",
+       "5997 2021-12-30 21:00:00+00:00     388  1.13195  1.13276  1.13194  1.13258   \n",
+       "5998 2021-12-30 22:00:00+00:00     118  1.13252  1.13264  1.13222  1.13230   \n",
+       "5999 2021-12-30 23:00:00+00:00     507  1.13227  1.13258  1.13190  1.13224   \n",
+       "\n",
+       "        bid_o    bid_h    bid_l    bid_c  ...  body_perc_prev_2  HANGING_MAN  \\\n",
+       "5995  1.13052  1.13291  1.13036  1.13267  ...         13.821138        False   \n",
+       "5996  1.13264  1.13297  1.13177  1.13186  ...         72.000000        False   \n",
+       "5997  1.13188  1.13269  1.13187  1.13249  ...         84.705882        False   \n",
+       "5998  1.13204  1.13236  1.13182  1.13218  ...         66.386555        False   \n",
+       "5999  1.13214  1.13251  1.13183  1.13216  ...         76.829268        False   \n",
+       "\n",
+       "      SHOOTING_STAR  SPINNING_TOP  MARUBOZU  ENGULFING  TWEEZER_TOP  \\\n",
+       "5995          False         False     False       True        False   \n",
+       "5996          False         False     False      False        False   \n",
+       "5997          False         False     False      False        False   \n",
+       "5998          False         False     False      False        False   \n",
+       "5999          False          True     False      False        False   \n",
+       "\n",
+       "      TWEEZER_BOTTOM  MORNING_STAR  EVENING_STAR  \n",
+       "5995           False         False         False  \n",
+       "5996           False         False         False  \n",
+       "5997           False         False         False  \n",
+       "5998           False         False         False  \n",
+       "5999           False         False         False  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_an.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "id": "11aabd5d",
    "metadata": {},
    "outputs": [],
@@ -292,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 140,
    "id": "371ab9ed",
    "metadata": {},
    "outputs": [
@@ -311,7 +528,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 141,
    "id": "f56614b9",
    "metadata": {},
    "outputs": [],
@@ -333,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 142,
    "id": "14497190",
    "metadata": {},
    "outputs": [],
@@ -345,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 143,
    "id": "9b408edb",
    "metadata": {},
    "outputs": [
@@ -474,7 +691,7 @@
        "4  1.21221      False         -1  1.214242  32.656498  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 144,
    "id": "9563015e",
    "metadata": {},
    "outputs": [],
@@ -517,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 145,
    "id": "c881d7ee",
    "metadata": {},
    "outputs": [],
@@ -527,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 146,
    "id": "a4e9aa9c",
    "metadata": {},
    "outputs": [
@@ -540,7 +757,7 @@
        "Name: SIGNAL, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 147,
    "id": "412972e3",
    "metadata": {},
    "outputs": [],
@@ -574,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 148,
    "id": "b905fc6e",
    "metadata": {},
    "outputs": [],
@@ -585,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 149,
    "id": "fa1aef5e",
    "metadata": {},
    "outputs": [
@@ -739,7 +956,7 @@
        "279  1.21307  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
