pre live trading bot

--- a/exploration/Data Test.ipynb
+++ b/exploration/Data Test.ipynb
@@ -3,88 +3,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fed330a",
+   "id": "f9b29909",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import plotly.graph_objects as go\n",
-    "import datetime as dt\n",
-    "from plotting import CandlePlot"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b19a3cf7",
+   "id": "0e67505e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pair = \"EUR_USD\"\n",
-    "granularity = \"H4\"\n",
-    "df = pd.read_pickle(f\"../data/{pair}_{granularity}.pkl\")"
+    "df = pd.read_pickle(\"../data/GBP_JPY_M5.pkl\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2046e30d",
+   "id": "ac514990",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_plot = df.iloc[:100]"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82b7f77",
+   "id": "e237b76f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_plot.shape"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb6f2c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cp = CandlePlot(df_plot)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "210c53e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cp.show_plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f25826c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43f3bf12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29ec4abb",
+   "id": "403dc2cb",
    "metadata": {},
    "outputs": [],
    "source": []
